file struct change

--- a/rem/index.html
+++ b/rem/index.html
@@ -28,8 +28,6 @@
 </head>
 
 <body>
-    <div style="width: 375px;height: 50px;background: brown;font-size: 20px;">
-    123</div>
     <header id="header">
         <a href="#">北京市</a>
         <div>
@@ -38,74 +36,74 @@
         <a href="#">我的</a>
     </header>
     <section id="banner">
-        <img src="./images/banner.jpg" alt="">
+        <img src="../images/banner.jpg" alt="">
     </section>
     <nav id="nav">
         <ul>
             <li>
                 <a href="#">
-                    <img src="./images/circle_01.png" alt="">
+                    <img src="../images/circle_01.png" alt="">
                     <a>餐饮住宿</a>
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <img src="./images/circle_02.png" alt="">
+                    <img src="../images/circle_02.png" alt="">
                     <a>餐饮住宿</a>
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <img src="./images/circle_03.png" alt="">
+                    <img src="../images/circle_03.png" alt="">
                     <a>餐饮住宿</a>
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <img src="./images/circle_04.png" alt="">
+                    <img src="../images/circle_04.png" alt="">
                     <a>餐饮住宿</a>
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <img src="./images/circle_05.png" alt="">
+                    <img src="../images/circle_05.png" alt="">
                     <a>餐饮住宿</a>
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <img src="./images/circle_06.png" alt="">
+                    <img src="../images/circle_06.png" alt="">
                     <a>餐饮住宿</a>
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <img src="./images/circle_07.png" alt="">
+                    <img src="../images/circle_07.png" alt="">
                     <a>餐饮住宿</a>
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <img src="./images/circle_08.png" alt="">
+                    <img src="../images/circle_08.png" alt="">
                     <a>餐饮住宿</a>
                 </a>
             </li>
         </ul>
     </nav>
     <section id="ad1" class="clearfix">
-        <a href="#"><img src="./images/img_01.jpg" alt=""></a>
-        <a href="#"><img src="./images/img_02.jpg" alt=""></a>
-        <a href="#"><img src="./images/img_03.jpg" alt=""></a>
+        <a href="#"><img src="../images/img_01.jpg" alt=""></a>
+        <a href="#"><img src="../images/img_02.jpg" alt=""></a>
+        <a href="#"><img src="../images/img_03.jpg" alt=""></a>
     </section>
     <section id="ad2">
-        <a href="#"><img src="./images/img_04.jpg" alt=""></a>
+        <a href="#"><img src="../images/img_04.jpg" alt=""></a>
     </section>
     <section id="list">
         <h3><span>综合推荐</span></h3>
         <article>
             <a href="#">
                 <div class="img">
-                    <img src="./images/img_05.jpg" alt="">
+                    <img src="../images/img_05.jpg" alt="">
                 </div>
                 <div class="text">
                     <h4>呦呦奶茶</h4>
@@ -119,7 +117,7 @@
         <article>
             <a href="#">
                 <div class="img">
-                    <img src="./images/img_05.jpg" alt="">
+                    <img src="../images/img_05.jpg" alt="">
                 </div>
                 <div class="text">
                     <h4>呦呦奶茶</h4>
@@ -133,7 +131,7 @@
         <article>
             <a href="#">
                 <div class="img">
-                    <img src="./images/img_05.jpg" alt="">
+                    <img src="../images/img_05.jpg" alt="">
                 </div>
                 <div class="text">
                     <h4>呦呦奶茶</h4>
@@ -147,7 +145,7 @@
         <article>
             <a href="#">
                 <div class="img">
-                    <img src="./images/img_05.jpg" alt="">
+                    <img src="../images/img_05.jpg" alt="">
                 </div>
                 <div class="text">
                     <h4>呦呦奶茶</h4>
@@ -161,7 +159,7 @@
         <article>
             <a href="#">
                 <div class="img">
-                    <img src="./images/img_05.jpg" alt="">
+                    <img src="../images/img_05.jpg" alt="">
                 </div>
                 <div class="text">
                     <h4>呦呦奶茶</h4>
@@ -175,7 +173,7 @@
         <article>
             <a href="#">
                 <div class="img">
-                    <img src="./images/img_05.jpg" alt="">
+                    <img src="../images/img_05.jpg" alt="">
                 </div>
                 <div class="text">
                     <h4>呦呦奶茶</h4>
@@ -189,7 +187,7 @@
         <article>
             <a href="#">
                 <div class="img">
-                    <img src="./images/img_05.jpg" alt="">
+                    <img src="../images/img_05.jpg" alt="">
                 </div>
                 <div class="text">
                     <h4>呦呦奶茶</h4>
@@ -202,5 +200,4 @@
         </article>
     </section>
 </body>
-
 </html>
